RESOLVED FIXED 249354
[css-scroll-snap] Focusing an element with scroll snap should not always result in snapping to that element
https://bugs.webkit.org/show_bug.cgi?id=249354
Summary [css-scroll-snap] Focusing an element with scroll snap should not always resu...
Nikos Mouchtaris
Reported 2022-12-14 16:55:11 PST
[css-scroll-snap] Focusing an element with scroll snap should not always result in snapping to that element
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-14 16:56:42 PST
Nikos Mouchtaris
Comment 2 2022-12-14 17:08:46 PST
Nikos Mouchtaris
Comment 3 2023-01-25 11:00:54 PST
EWS
Comment 4 2023-01-25 12:52:39 PST
Committed 259381@main (7c41fd985950): <https://commits.webkit.org/259381@main> Reviewed commits have been landed. Closing PR #7657 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.